// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel reducer handles actions - setChannelId 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": "this-is-a-test-id",
  "message": "",
  "shareableUri": "",
  "messages": Immutable.Record {
    "loader": Immutable.Record {
      "loading": true,
      "message": "",
    },
    "data": Immutable.List [],
    "errors": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoading 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "messages": Immutable.Record {
    "loader": Immutable.Record {
      "loading": true,
      "message": "",
    },
    "data": Immutable.List [],
    "errors": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoadingMessage 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "messages": Immutable.Record {
    "loader": Immutable.Record {
      "loading": true,
      "message": "this is a loading message",
    },
    "data": Immutable.List [],
    "errors": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setShareableUri 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "zbay.io/channel/this-is-a-hash",
  "messages": Immutable.Record {
    "loader": Immutable.Record {
      "loading": true,
      "message": "",
    },
    "data": Immutable.List [],
    "errors": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles epics - loadChannel 1`] = `
Immutable.List [
  Immutable.Map {
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "message": "This is some message test-1",
    "createdAt": 1551963828,
    "type": 1,
    "id": "test-1",
    "spent": "0.2",
    "fromYou": true,
  },
  Immutable.Map {
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "message": "This is some message test-2",
    "createdAt": 1551963828,
    "type": 1,
    "id": "test-2",
    "spent": "0.2",
    "fromYou": true,
  },
]
`;

exports[`channel reducer handles epics - loadMessages clears out pending messages 1`] = `
Immutable.Map {
  "test-1-op": Immutable.Operation {
    "opId": "test-1-op",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Object {
        "createdAt": 1551963828,
        "id": "test-1",
        "message": "This is some message test-1",
        "sender": Object {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
        "type": 1,
      },
      "channelId": "this-is-a-test-id",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
  "test-2-op": Immutable.Operation {
    "opId": "test-2-op",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Object {
        "createdAt": 1551963828,
        "id": "test-2",
        "message": "This is some message test-2",
        "sender": Object {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
        "type": 1,
      },
      "channelId": "this-is-a-test-id",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
}
`;

exports[`channel reducer handles epics - loadMessages loads for current channel 1`] = `
Immutable.List [
  Immutable.Map {
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "message": "This is some message test-1",
    "createdAt": 1551963828,
    "type": 1,
    "id": "test-1",
    "spent": "0.2",
    "fromYou": true,
  },
  Immutable.Map {
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "message": "This is some message test-2",
    "createdAt": 1551963828,
    "type": 1,
    "id": "test-2",
    "spent": "0.2",
    "fromYou": true,
  },
]
`;

exports[`channel reducer handles epics - resendMessage resend selected message 1`] = `
Immutable.Map {
  "new-op-id": Immutable.Operation {
    "opId": "new-op-id",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "message-op-id",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is some message test-1",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      "channelId": "this-is-a-test-id",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
}
`;

exports[`channel reducer handles epics - sendOnEnter sends message 1`] = `
Array [
  Array [
    Object {
      "channelId": "this-is-a-test-id",
      "message": Object {
        "createdAt": 1551963828,
        "message": "this is some message",
        "sender": Object {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
          "username": "Saturn",
        },
        "type": 1,
      },
    },
  ],
]
`;
